--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 	<body>
 		<header class="header">
 			<a href="index.html" class="logo"  target="_blank" >logo</a>
-			
+			<nav class="navigation">
+				<ul class="nav-ul">
+					<li class="nav-li">
+						<a href="index.html">HOME</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">DISCOVERY</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">PHOTOS</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">CONTACT</a>
+					</li>
+				</ul>
+			</nav>
+			<img src="images/web.svg" class="img-logo">
 		</header>
 
 	</body>
