--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<meta charset="utf-8">
-		<title>Lesson 5</title>
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="icon" href="images/icon.png" sizes="16x16">
+		<title>lesson-5 Home work</title>
 	</head>
 	<body>
 		<header class="header">
-			<a href="index.html" class="logo"  target="_blank" >logo</a>
-			<nav class="navigation">
-				<ul class="nav-ul">
-					<li class="nav-li">
-						<a href="index.html">HOME</a>
-					</li>
-					<li class="nav-li">
-						<a href="#">DISCOVERY</a>
-					</li>
-					<li class="nav-li">
-						<a href="#">PHOTOS</a>
-					</li>
-					<li class="nav-li">
-						<a href="#">CONTACT</a>
-					</li>
+			<a class="logo" href="index.html">logo</a>
+			<nav class="nav">
+				<ul>
+					<li class="nav-li">HOME</li>
+					<li class="nav-li">DISCOVERY</li>
+					<li class="nav-li">PHOTOS</li>
+					<li class="nav-li">CONTACT</li>
 				</ul>
 			</nav>
-			<img src="images/web.svg" class="img-logo">
+			<img class="icon" src="images/christopher-campbell-28567-unsplash.svg" alt="icon">
 		</header>
+		<section class="section1">
+			<h2 class="h2">TRENDING</h2>
+			
+		</section>
+		<section class="section2">
+			<div class="div1">
+				<div class="div2">
+					<img src="images/3.jpg">
+					<p class="imgtext1">Dolore magna aliqua</p>
+				</div>
+				<p class=" blocktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+				<img class="timeimg" src="images/web.svg" alt="time.img">
+			</div>
+		</section>
+		<footer>
+			
+		</footer>
 
 	</body>
 </html>
