--- a/index.html
+++ b/index.html
@@ -2,37 +2,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="icon" href="images/icon.png" sizes="16x16">
-		<title>lesson-5 Home work</title>
+			<link rel="stylesheet" type="text/css" href="css/reset.css">
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+			<link rel="icon" href="images/icon.png" sizes="16x16">
+			<title>lesson-5 Home work</title>
 	</head>
 	<body>
 		<header class="header">
 			<a class="logo" href="index.html">logo</a>
-			<nav class="nav">
+			<nav class="navigation">
 				<ul>
-					<li class="nav-li">HOME</li>
-					<li class="nav-li">DISCOVERY</li>
-					<li class="nav-li">PHOTOS</li>
-					<li class="nav-li">CONTACT</li>
+					<li class="nav-li">
+						<a href="index.html">HOME</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">DISCOVERY</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">PHOTOS</a>
+					</li>
+					<li class="nav-li">
+						<a href="#">CONTACT</a>
+					</li>
 				</ul>
 			</nav>
-			<img class="icon" src="images/christopher-campbell-28567-unsplash.svg" alt="icon">
+			<img class="icon" src="images/christopher-campbell-28567-unsplash.svg">
 		</header>
-		<section class="section1">
-			<h2 class="h2">TRENDING</h2>
+		<section>
 			
-		</section>
-		<section class="section2">
-			<div class="div1">
-				<div class="div2">
-					<img src="images/3.jpg">
-					<p class="imgtext1">Dolore magna aliqua</p>
-				</div>
-				<p class=" blocktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
-				<img class="timeimg" src="images/web.svg" alt="time.img">
-			</div>
 		</section>
 		<footer>
 			
