--- a/index.html
+++ b/index.html
@@ -13,23 +13,40 @@
 			<nav class="navigation">
 				<ul>
 					<li class="nav-li">
-						<a href="index.html">HOME</a>
+						<a class="active" href="index.html">HOME</a>
 					</li>
 					<li class="nav-li">
-						<a href="#">DISCOVERY</a>
+						<a class="li" href="#">DISCOVERY</a>
 					</li>
 					<li class="nav-li">
-						<a href="#">PHOTOS</a>
+						<a class="li" href="#">PHOTOS</a>
 					</li>
 					<li class="nav-li">
-						<a href="#">CONTACT</a>
+						<a class="li" href="#">CONTACT</a>
 					</li>
 				</ul>
 			</nav>
 			<img class="icon" src="images/christopher-campbell-28567-unsplash.svg">
 		</header>
-		<section>
+		<section class="section1">
+			<h3 class="title1"> TRENDING </h3>
+			<div class="div1">
+				<div class="imgwrapper">
+					<img src="images/3.jpg" alt="lake">
+					<p class="imgtext1">Dolore magna aliqua</p>
+				</div>
+				<p class=" blocktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+				<img class="timeimg" src="images/web.svg" alt="time.img">
+			</div>
 			
+			<div class="div2">
+				<div class="imgwrapper">
+					<img src="images/1.jpg" alt="image">
+					<p class="imgtext2">Dolore magna aliqua</p>
+				</div>
+				<p class=" blocktext2">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+				<img class="timeimg2" src="images/1h.svg" alt="time.img2">
+			</div>
 		</section>
 		<footer>
 			
